[tool.poetry]
name = "poetry-demo"
version = "0.1"
description = "This is a demo package"
authors = ["Tim <tim@example.com>"] 
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "demo", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
